--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 dj-database-url==1.0.0
 Django==4.1.1
+django-bootstrap5==22.1
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.5.0
 django-extensions==3.2.0
