--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-crispy-forms==1.14.0
 django-debug-toolbar==3.5.0
 django-extensions==3.2.0
 django-extensions-shell==1.7.4.1
+django-heroku==0.3.1
 django-import-export==2.8.0
 et-xmlfile==1.1.0
 executing==0.9.1
