--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ diff-match-patch==20200713
 dj-database-url==1.0.0
 Django==4.1.1
 django-bootstrap5==22.1
+django-cleanup==6.0.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.6.0
 django-extensions==3.2.1
 django-extensions-shell==1.7.4.1
 django-heroku==0.3.1
 django-import-export==2.9.0
+django-on-heroku==1.1.2
 et-xmlfile==1.1.0
 executing==1.0.0
 gunicorn==20.1.0
