--- a/requirements.txt
+++ b/requirements.txt
@@ -151,6 +151,12 @@ flask==2.2.2
     # via -r requirements.txt
 flower==1.2.0
     # via -r requirements.txt
+gevent==22.10.1
+    # via -r requirements.txt
+greenlet==1.1.3.post0
+    # via
+    #   -r requirements.txt
+    #   gevent
 gunicorn==20.1.0
     # via -r requirements.txt
 humanize==4.4.0
@@ -179,6 +185,10 @@ kombu==5.2.4
     # via
     #   -r requirements.txt
     #   celery
+llvmlite==0.39.1
+    # via
+    #   -r requirements.txt
+    #   numba
 markuppy==1.14
     # via
     #   -r requirements.txt
@@ -192,10 +202,14 @@ matplotlib-inline==0.1.6
     # via
     #   -r requirements.txt
     #   ipython
+numba==0.56.3
+    # via -r requirements.txt
 numpy==1.23.3
     # via
     #   -r requirements.txt
+    #   numba
     #   pandas
+    #   scipy
 oauthlib==3.2.1
     # via
     #   -r requirements.txt
@@ -233,6 +247,8 @@ pickleshare==0.7.5
     #   -r requirements.txt
     #   ipython
 pika==1.3.0
+    # via -r requirements.txt
+pika-stubs==0.1.3
     # via -r requirements.txt
 pip-tools==6.8.0
     # via -r requirements.txt
@@ -314,6 +330,8 @@ requests-oauthlib==1.3.1
     # via
     #   -r requirements.txt
     #   social-auth-core
+scipy==1.9.2
+    # via -r requirements.txt
 six==1.16.0
     # via
     #   -r requirements.txt
@@ -378,9 +396,7 @@ werkzeug==2.2.2
     #   -r requirements.txt
     #   flask
 wheel==0.37.1
-    # via
-    #   -r requirements.txt
-    #   pip-tools
+    # via pip-tools
 whitenoise==6.2.0
     # via
     #   -r requirements.txt
@@ -398,6 +414,14 @@ xlwt==1.3.0
     # via
     #   -r requirements.txt
     #   tablib
+zope-event==4.5.0
+    # via
+    #   -r requirements.txt
+    #   gevent
+zope-interface==5.5.0
+    # via
+    #   -r requirements.txt
+    #   gevent
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
