--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+### Django template
+*.log
+*.pot
+*.pyc
+__pycache__/
+prod_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
 
-!/StaySharp/prod_settings.py
+# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
+# in your Git repository. Update and uncomment the following line accordingly.
+# <django-project-name>/staticfiles/
+
