--- a/requirements.txt
+++ b/requirements.txt
@@ -260,7 +260,7 @@ prompt-toolkit==3.0.31
     #   -r requirements.txt
     #   click-repl
     #   ipython
-psycopg2-binary==2.9.3
+# psycopg2-binary==2.9.3
     # via
     #   -r requirements.txt
     #   django-on-heroku
