--- a/config/do_server.conf
+++ b/config/do_server.conf
@@ -1,5 +1,5 @@
 
-[program:DO_server]
+[program:StaySharp]
 command=/home/ip/venv/bin/gunicorn StaySharp.wsgi:application -c /home/ip/DO_server/config/gunicorn.conf.py
 directory=/home/ip/DO_server
 user=ip
