correct start_gunicorn.sh, log

--- a/config/do_server.conf
+++ b/config/do_server.conf
@@ -1,7 +1,7 @@
 
 [program:StaySharp]
-command=/home/ip/venv/bin/gunicorn StaySharp.wsgi:application -c /home/ip/DO_server/config/gunicorn.conf.py
-directory=/home/ip/DO_server/
+command=/home/ip/venv/bin/gunicorn StaySharp.wsgi:application --bind 127.0.0.1:8000
+directory=/home/ip/DO_server
 user=ip
 autorestart=true
 redirect_stderr=true
